# lab-3-tomk132-1

./: CMakeLists.txt  ClassDiagram.cd  ClassDiagram2.cd  Figury.h  lab-3-tomk132-1.sln  lab-3-tomk132-1.vcxproj  lab-3-tomk132-1.vcxproj.filters  main.cpp  transportujFlota.hpp
